<resources>
    <string name="app_name">Paint</string>
    <string name="splash_start">Strart</string>
    <string name="settings_button_text">Settings</string>
    <string name="about_button_text">About</string>
    <string name="about_title_text">About</string>
    <string name="setting_title_text">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_picker_text">Choose the canvas background color:</string>
    <string name="color_white_text">White</string>
    <string name="color_black_text">Black</string>
    <string name="color_red_text">Red</string>
    <string name="color_yellow_text">Yellow</string>
    <string name="color_purple_text">Purple</string>
    <string name="color_blue_text">Blue</string>
    <string name="color_green_text">Green</string>
    <string name="color_orange_text">Orange</string>
    <string name="color_pick_done_text">Done</string>
</resources>